<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_87BE9A">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_email">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/logo_01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/find_a_roommate"
            android:textColor="@color/black_252529"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_email"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/btn_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/green_6BA27E"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/register_with_email"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/ll_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/blue_48649F"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/connect_with_facebook"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/have_an_account"
            android:textColor="@color/black_252529"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>