<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_87BE9A">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/profile"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:padding="10dp"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_profile"
        android:layout_marginTop="25dp"
        android:background="@color/white_opacity_30" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_pic"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@color/white_opacity_70" />

    <TextView
        android:id="@+id/tv_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/civ_profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_ui_text_bold"
        android:textColor="@color/green_87BE9A"
        android:textSize="70sp"
        tools:text="M" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/civ_profile_pic"
        android:layout_alignBottom="@id/civ_profile_pic"
        android:src="@drawable/ic_camera"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/ll_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/civ_profile_pic"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/first_name"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_bottom_line"
            android:fontFamily="@font/sf_ui_text_medium"
            android:hint="@string/your_first_name"
            android:inputType="textCapWords"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_first_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/last_name"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_bottom_line"
            android:fontFamily="@font/sf_ui_text_medium"
            android:hint="@string/your_last_name"
            android:inputType="textCapWords"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_last_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/location"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_bottom_line"
            android:fontFamily="@font/sf_ui_text_medium"
            android:hint="@string/your_location"
            android:inputType="textCapWords"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_location"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_bottom_line"
            android:fontFamily="@font/sf_ui_text_medium"
            android:hint="@string/your_phone_number"
            android:inputType="phone"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_phone"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_bottom_line"
            android:fontFamily="@font/sf_ui_text_medium"
            android:hint="@string/your_e_mail_address"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

</RelativeLayout>