<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_87BE9A">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/white_left_arrow"
        android:src="@drawable/ic_keyboard_arrow_left_white_35dp" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_back_arrow"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="77.5dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/recover_your_password"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bottom_line_selector"
            android:fontFamily="@font/sf_pro_display_semi_bold"
            android:inputType="textEmailAddress"
            android:paddingBottom="12.5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="71.5dp"
            android:background="@color/green_6BA27E"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>