<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_87BE9A">

    <TextView
        android:id="@+id/tv_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/requests"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_requests"
        android:layout_marginTop="25dp"
        android:background="@color/white_opacity_30" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_below="@id/divider"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_applied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/tv_bottom_line"
                android:fontFamily="@font/sf_pro_display_bold"
                android:paddingBottom="9dp"
                android:text="@string/applied"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_listing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_bold"
                android:paddingBottom="9dp"
                android:text="@string/my_listing"
                android:textColor="@color/white_opacity_70"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_buttons"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_building" />

    <TextView
        android:id="@+id/tv_bold_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_image"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sf_ui_text_bold"
        android:text="@string/keep_track_of_your_requests"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_regular_font_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bold_statement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:lineSpacingExtra="3sp"
        android:text="@string/once_you_start_creating"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="28dp"
        android:background="@color/green_6BA27E"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>