<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_list"
            android:text="@string/list"
            android:background="@android:color/white"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textColor="@color/black_252529"
            android:layout_width="55dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/et_current_location"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:paddingStart="15dp"
            android:inputType="textCapSentences"
            android:layout_marginStart="10dp"
            android:textColor="@color/grey_C2C2C2"
            android:layout_marginEnd="10dp"
            android:paddingEnd="15dp"
            android:hint="@string/current_location"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_filter"
            android:text="@string/filter"
            android:textSize="12sp"
            android:background="@android:color/white"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textColor="@color/black_252529"
            android:layout_width="55dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>